kubernetes/services/ntfy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ntfy
  labels:
    name: ntfy
    type: productivity
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
